kubernetes_services/services/dynamodb/dynamodb.yml
# Deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
  namespace: aws
  labels:
    app: dynamodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
        name: dynamodb
    spec:
      containers:
        - name: dynamodb
          image: amazon/dynamodb-local:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /home/dynamodblocal/data
              name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: aws-pvc

---
# Expose the POD in the Cluster

apiVersion: v1
kind: Service
metadata:
  labels:
    app: dynamodb
  name: dynamodb
  namespace: aws
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: dynamodb
  type: ClusterIP
